[tool.poetry]
name = "timewarrior-early-morning-are-you-working"
version = "0.1.0"
description = "Early Morning Are You Working? - Get reminded that you should track time."
authors = ["Simon Lundström <simmel@soy.se>"]
license = "ISC License"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
